@@ -17,6 +17,11 @@ CR=270742
 # Set the position of the update window relative to top-right of screen
 UPD_ARGS="-wx=-40 -wy=40"
 
+# After a given number of hops, discard candidates that have scored less
+# than the given percentage of the best candidate.
+PRUNE_HOPS=3        # after 3 hops
+PRUNE_SCORE=20      # percentage
+
 # You can only have one set of variables "live" at a time, comment out
 # old ships while you are not flying them, then you can just uncomment
 # them later on.
